--- a/compete.toml
+++ b/compete.toml
@@ -22,7 +22,8 @@ test-suite = "{{ manifest_dir }}/testcases/{{ bin_alias }}.yml"
 
 [template]
 src = '''
-use proconio::*;
+use proconio::marker::{Bytes, Chars};
+use proconio::{fastout,input};
 
 #[fastout]
 fn main() {
