--- a/compete.toml
+++ b/compete.toml
@@ -22,7 +22,7 @@ test-suite = "{{ manifest_dir }}/testcases/{{ bin_alias }}.yml"
 
 [template]
 src = '''
-use proconio::marker::{Bytes, Chars};
+use proconio::marker::{Bytes, Chars, Usize1};
 use proconio::{fastout,input};
 
 #[fastout]
